--- a/iniciandoSpring/src/main/resources/templates/nuevoAutor.html
+++ b/iniciandoSpring/src/main/resources/templates/nuevoAutor.html
@@ -11,10 +11,17 @@
 	
 	<!--el * quiere decir que dentro del obj hay una propiedad que se llama {__} | si esta el * quiere decir que hay object antes-->
 		<p>Nombre: <input type="text" th:field="*{nombre}"/></p> 
-		<p>Edad: <input type="number" placeholder="inserta una edad" th:field="*{edad}"/></p>
+		<p>Edad: <input type="number" th:field="*{edad}" placeholder="inserta una edad"/></p>
 		<p>Email: <input type="email" th:field="*{email}"/></p>
 		
-		<p><input type="submit" value="Submit"/>
+		<p>
+			<select th:field="*{coche}"> <!-- lo guardo en el coche del autor -->
+				<option th:each="cocheOpt:${coches}" th:value="${cocheOpt.id}" th:text="${cocheOpt.marca}">Mercedes</option>
+			</select> <!-- el coche que me va a ir dando de la lista de coches (lo nombramos distinto para conflictos)-->
+		</p>
+		
+		<p>
+			<input type="submit" value="Submit"/>
 			<input type="reset" value="Reset"/>
 		</p>
 	</form>
