Hacer los coches

--- a/iniciandoSpring/src/main/resources/templates/autor/autores.html
+++ b/iniciandoSpring/src/main/resources/templates/autor/autores.html
@@ -6,7 +6,7 @@
 
 <body>	
 	<h1 th:text="#{hola.title}">Bienvenido aquí una lista de autores</h1>
-	<p th:text="#{hola.numerosAutores(${nombre})}">blabla</p>
+	<!-- <p th:text="#{hola.numerosAutores(${nombre})}">blabla</p> -->
 	
 	<div th:switch="${#lists.isEmpty(autores)}">
 		<div th:case="true">
@@ -20,6 +20,10 @@
 		        <th>Nombre</th>
 		        <th>Edad</th>
 		        <th>Email</th>
+		        <th>Texto</th>
+		        <th>Rango</th>
+		        <th>Carnet</th>
+		        <th>Género</th>
 		        <th>Coche</th>
 		        <th></th>
 		        <th></th>
@@ -30,10 +34,20 @@
 		        <td th:text="${autor.nombre}">Nombre</td>
 		        <td th:text="${autor.edad}">Edad</td>
 		        <td th:text="${autor.email}">Email</td>
+		        <td th:text="${autor.texto}">Texto</td>
+		        <td th:text="${autor.rango}">Rango</td>
+		        
+		        <td th:if="${autor.carnet}" th:text="'Tengo carnet'">Carnet</td>
+		        <td th:unless="${autor.carnet}" th:text="'No tengo carnet'">Carnet</td>
+		        
+		        <td th:text="${autor.genero}">Genero</td>
+		        
 		        <!-- primero itero y luego pregunto -->
 		        <td th:each="coche:${coches}" th:if="${coche.id}==${autor.coche}" th:text="${coche.marca}">Mercedes</td>
+		        
 		        <!-- SIEMPRE q tengamos un enlace, q vaya a una ruta que tengo un controlador, pq vamos a manejar lo que va a pasar a continuacion -->
 		        <td><a href="#" th:href="@{/autores/{id}(id=${autor.id})}">Detalle</a></td>
+		        
 				<!-- crear una ruta, permite recibir el id q vamos a buscar, dejar q vaya al enlace y eliminar el autor y volver aqui mismo-->
 		        <td><a href="#" th:href="@{/eliminarAutor/{id}(id=${autor.id})}">Eliminar</a></td>
 		        <td><a href="#" th:href="@{/editarAutor/{id}(id=${autor.id})}">Editar</a></td>
