--- a/iniciandoSpring/src/main/resources/templates/autor/detalleAutor.html
+++ b/iniciandoSpring/src/main/resources/templates/autor/detalleAutor.html
@@ -12,6 +12,6 @@
     <p th:text="${autor.edad}">Edad</p>
     <p th:text="${autor.email}">Email</p>
     
-    <p><a href="#" th:href="@{/}">Volver a la lista de autores</a></p>
+    <p><a href="#" th:href="@{/autores}">Volver a la lista de autores</a></p>
 </body>
 </html>
