--- a/iniciandoSpring/src/main/resources/templates/index.html
+++ b/iniciandoSpring/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 	
 	<ul>
 		<li><a href="#" th:href="@{/autores}">Autores</a></li>
-		<li><a href="#">Coches</a></li>
+		<li><a href="#" th:href="@{/coches}">Coches</a></li>
 	</ul>
 	
 </body>
