--- a/iniciandoSpring/src/main/resources/templates/coche/coches.html
+++ b/iniciandoSpring/src/main/resources/templates/coche/coches.html
@@ -52,7 +52,7 @@
 	<form action="#" th:action="@{addCoche}" th:object="${coche}" method="post">
 	
 		<p>Marca: <input type="text" th:field="*{marca}"/></p> 
-		<p>Caballos: <input type="number" th:field="*{caballos}" placeholder="inserta un numero de caballos"/></p>
+		<p>Caballos: <input type="number" th:field="*{caballos}" placeholder="inserta num de caballos"/></p>
 		<p>Color: <input type="text" th:field="*{color}"/></p>
 			 
 		<p>
